# evolutionary-stability-optimizer

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: tests.yml
docs/: custom-gpt-setup.md  detector-comparisons.md  paper-vs-implementation.md
eso/: __init__.py  cli.py  codon_usage.py  constraints.py  custom_score.py  io_utils.py  optimize.py  pipeline.py  report.py  sequence_utils.py
eso/data/: human-antibody-heavy-chain-codon-frequencies.csv  human-antibody-light-chain-codon-frequencies.csv
eso/detection/: _overlap.py  common_motifs.py  dispatch.py  junction_linker.py  methylation.py  motif_utils.py  recombination.py  slippage.py  staubility_variant.py
examples/: custom_score_template.py  indexes_template.json
examples/antibody_optimization/: run_example.py
examples/antibody_optimization/data/: HeavyCORF.txt  LightCORF.txt
tests/: test_cli.py  test_cli_custom_score.py  test_codon_usage.py  test_constraints.py  test_custom_score.py  test_custom_score_loader.py  test_detection_dispatch.py  test_detection_junction_linker.py  test_detection_methylation.py  test_detection_overlap.py  test_detection_recombination.py  test_detection_slippage.py  test_detection_staubility_variant.py  test_io_utils.py  test_motif_utils.py  test_optimize.py  test_pipeline_integration.py  test_report.py  test_sequence_utils.py
